# EDAF50

lab1/: Makefile  decode  encode  encode.cc  hello  hello.cc  list.cc  ltest  out  print_argv  reflection.txt  test_coding
lab1/buggy_programs/: a.out  bounds-heap  dangling  leak  sum  ub
lab1_cmake/: CMakeLists.txt  Makefile  decode.cc  ltest.cc
lab1_cmake/buggy_programs/: bounds  leak.cc
lab1_cmake/liblab1/: CMakeLists.txt  coding.cc  list.cc  list.h
lab2/: .nfs00000000023e500700000030  Makefile  dictionary.cc  dictionary.d  dictionary.h  reflections.txt  small_word.txt  spell  spell.d  test_dictionary  test_dictionary.cc  test_dictionary.d  test_trigrams  test_trigrams.cc  test_trigrams.d  test_word  test_word.cc  test_word.d  trigrams.cc  trigrams.d  trigrams.h  word.cc  word.h  words.txt
lab3/: Makefile  date.cc  date.h  date_test  date_test.cc  html.ans  out.ans  prime.ans  prime_numbers.cc  prime_numbers.d  prime_numbers.h  tag_remover.cc  tag_remover.d  tag_remover.h  test_prime_numbers  test_prime_numbers.cc  test_prime_numbers.d  test_string_conversion  test_string_conversion.cc  test_string_conversion.d  test_tagremover  test_tagremover.cc  test_tagremover.d  test_tostring  test_tostring.cc  test_tostring.d
lab4/: relfections.txt
lab4/bitset/: Makefile  bitreference.cc  bitreference.d  bitset.cc  bitset.d  bitsetiterator.h  bitsettest1  bitsettest1.d  bitsettest2  bitsettest2.d  simplebitsettest
lab4/nameserver/: Makefile  hns.cc  hns.h  mns.cc  mns.h  nstest  nstest.d  nstime  nstime.d  umns.cc  umns.h  vns.cc  vns.h
(+4 files in other folders)
